banner changes and spacings correction then tab colour changes

--- a/css/style.css
+++ b/css/style.css
@@ -460,8 +460,8 @@ header h1{
     border-color: #faf6fb #faf6fb #FFF;
     font-size: 19px;
     font-weight: 500;
-    color: #616161;
-    background: #ededed;
+    color: #ffffff;
+    background: #c50201;
 }
 
 .nav-tabs .nav-link.active {
